[gd_scene load_steps=12 format=3 uid="uid://b2albw28h1bpl"]

[ext_resource type="Script" path="res://Scenes/Persuasion/persuasion.gd" id="1_ak5tq"]
[ext_resource type="Resource" uid="uid://bawgrs8msfrhj" path="res://Characters/Persuasion/persuasion_player_stats.tres" id="2_2cnsr"]
[ext_resource type="Script" path="res://Scenes/UI/persuasion_ui.gd" id="2_7uh34"]
[ext_resource type="Texture2D" uid="uid://dep44umo22auj" path="res://Sprites/Ground Backgrounds/spaceship_interior.png" id="4_wbumj"]
[ext_resource type="PackedScene" uid="uid://bve5g2o1u7jq8" path="res://Scenes/UI/card_pile_open_button.tscn" id="5_5vu3e"]
[ext_resource type="Script" path="res://Scenes/Persuasion/player_persuasion_handler.gd" id="5_ojiyd"]
[ext_resource type="Texture2D" uid="uid://cwey0j83hn857" path="res://Sprites/UI/discard_icon.png" id="6_bspbj"]
[ext_resource type="Theme" uid="uid://f2d0gj7br2yh" path="res://main_theme.tres" id="8_l5s61"]
[ext_resource type="PackedScene" uid="uid://dq2fodtakmj7l" path="res://Scenes/UI/card_pile_view.tscn" id="8_w5mi6"]
[ext_resource type="FontFile" uid="uid://cad427yuixp3b" path="res://Fonts/m5x7.ttf" id="9_xwdb3"]
[ext_resource type="Script" path="res://Scenes/UI/hand.gd" id="12_sfj4h"]

[node name="Persuasion" type="Node2D"]
script = ExtResource("1_ak5tq")
persuasion_stats = ExtResource("2_2cnsr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-95, -58)
scale = Vector2(0.485835, 0.4489)
texture = ExtResource("4_wbumj")
centered = false

[node name="PersuasionUI" type="CanvasLayer" parent="."]
script = ExtResource("2_7uh34")

[node name="Hand" type="HBoxContainer" parent="PersuasionUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -40.0
offset_right = 66.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("12_sfj4h")

[node name="DrawPileButton" parent="PersuasionUI" node_paths=PackedStringArray("counter") instance=ExtResource("5_5vu3e")]
unique_name_in_owner = true
offset_left = 6.0
offset_top = 252.0
offset_right = 38.0
offset_bottom = 284.0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="PersuasionUI/DrawPileButton"]
layout_mode = 0
offset_left = -13.0
offset_top = 19.0
offset_right = 27.0
offset_bottom = 32.0
text = "99"
horizontal_alignment = 2

[node name="DiscardPileButton" parent="PersuasionUI" node_paths=PackedStringArray("counter") instance=ExtResource("5_5vu3e")]
unique_name_in_owner = true
offset_left = 476.0
offset_top = 252.0
offset_right = 508.0
offset_bottom = 284.0
texture_normal = ExtResource("6_bspbj")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="PersuasionUI/DiscardPileButton"]
layout_mode = 0
offset_left = -13.0
offset_top = 19.0
offset_right = 27.0
offset_bottom = 32.0
text = "99"
horizontal_alignment = 2

[node name="DiscardButton" type="Button" parent="PersuasionUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -71.0
offset_right = -2.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("8_l5s61")
theme_override_fonts/font = ExtResource("9_xwdb3")
theme_override_font_sizes/font_size = 32
text = "Discard"

[node name="PlayerPersuasionHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("5_ojiyd")
hand = NodePath("../PersuasionUI/Hand")

[node name="CardPileViews" type="CanvasLayer" parent="."]

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("8_w5mi6")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("8_w5mi6")]
unique_name_in_owner = true
visible = false
